--- a/estilo.css
+++ b/estilo.css
@@ -7,10 +7,18 @@ html, body {
 }
 
 #recipiente{
-
+    width: 800px;
+    margin: 0 auto;
+    background-image: linear-gradient(135deg, rgba(246,241,178,1) 0%, rgba(69,153,178,1) 100%);
 }
-
+#cabecalho {
+    text-align: right;
+    right: 45px;
+    position: relative;
+    
+}
 #cabecalho h1{
+    margin: 0; padding: 20px 0 0 0;
     font-size: 36px;
     font-family: 'Ravie';
     color: #f90c0c;
@@ -18,6 +26,7 @@ html, body {
 }
 
 #cabecalho h2{
+    margin: 0; padding: 0;
     font-size: 24px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #333;
@@ -25,4 +34,29 @@ html, body {
 
 .roxo{
     color: #d027aa;
+}
+
+#cardapio {
+    width: 646px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #333;
+    border: solid, 1px, #3a3f3b;
+    background-color: rgba(255, 255, 255, 0.2);
+    position: relative;
+}
+
+#cardapio h3{
+    font-size: 18px;
+    font-style: oblique;
+}
+
+#ticket{
+    position: absolute;
+    top: 295px;
+    left: -69px;
+    transition: all 200ms ease;
+}
+
+#ticket:hover{
+    left: 0px;
 }
