--- a/estilo.css
+++ b/estilo.css
@@ -40,9 +40,10 @@ html, body {
     width: 646px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #333;
-    border: solid, 1px, #3a3f3b;
+    border: 1px solid #3a3f3b8f;
     background-color: rgba(255, 255, 255, 0.2);
     position: relative;
+    padding: 12px;
 }
 
 #cardapio h3{
